<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:id="@+id/fg_todo_item_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--办理进度-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fg_todo_status"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/status"
                    android:textColor="@color/mine_info_todo_text_process"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fg_todo_status1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/fg_todo_status"
                    android:gravity="center"
                    android:text="@string/status"
                    android:textColor="@color/mine_info_todo_text_process_value"
                    android:textSize="16sp" />
                <!--申请时间-->
                <TextView
                    android:id="@+id/fg_todo_applicationdate"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:gravity="center_vertical"
                    android:text="2017-07-31"
                    android:textColor="#808080"
                    android:textSize="14sp" />

            </RelativeLayout>


            <View
                android:id="@+id/todo_item_view1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="44dp"
                android:background="@color/divide_line" />


            <!--起运地-->
            <TextView
                android:id="@+id/start_province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/todo_item_view1"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/start_province"
                android:textColor="#808080"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/fg_todo_item_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/todo_item_view1"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="18dp"
                android:layout_toRightOf="@+id/start_province"
                android:background="@mipmap/start_end" />

            <!--目的地-->
            <TextView
                android:id="@+id/end_province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/todo_item_view1"
                android:layout_marginLeft="78dp"
                android:layout_marginTop="15dp"
                android:layout_toRightOf="@+id/start_province"
                android:text="@string/end_province"
                android:textColor="#808080"
                android:textSize="14sp" />
            <!--预约起止日-->
            <TextView
                android:id="@+id/fg_todo_start_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_province"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/start_end_date"
                android:textColor="#808080"
                android:textSize="14sp" />

            <!--当前任务-->
            <TextView
                android:id="@+id/fg_todo_current_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fg_todo_start_end_date"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/current_task"
                android:textColor="#808080"
                android:textSize="14sp" />
            <!--申请信息-->
            <TextView
                android:id="@+id/apply_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fg_todo_current_task"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/apply_info"
                android:textColor="#808080"
                android:textSize="14sp" />

            <!--流程状态-->
            <TextView
                android:id="@+id/process_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/apply_info"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/process_state"
                android:textColor="#808080"
                android:textSize="14sp" />

            <!--是否起运省-->
            <TextView
                android:id="@+id/if_start_province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/process_state"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/if_start_province"
                android:textColor="#808080"
                android:textSize="14sp" />

            <View
                android:id="@+id/todo_item_view2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/if_start_province"
                android:layout_marginTop="15dp"
                android:background="@color/divide_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_below="@+id/todo_item_view2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!--承运单位-->
                <TextView
                    android:id="@+id/fg_todo_carrier"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:layout_marginLeft="15dp"
                    android:gravity="center"
                    android:text="@string/carrier"
                    android:textColor="#808080"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/todo_list_tag_noread"
                    android:layout_width="44dp"
                    android:layout_height="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/isread"
                    android:gravity="center"
                    android:text="未读"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/todo_list_tag_isread"
                    android:layout_width="44dp"
                    android:layout_height="17dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/noread"
                    android:gravity="center"
                    android:text="已读"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>