<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardElevation="1dp"
        app:cardCornerRadius="0.5dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            >
            <!--审批结果
-->
            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/mine_info_todo_text_process"
                android:layout_alignParentLeft="true"
                android:id="@+id/schedule_opt_result"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:text="@string/schedule_opt_result" />
            <TextView
                android:paddingRight="15dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/mine_info_radiogroup_unchecked"
                android:text="同意"
                android:id="@+id/schedule_opt_result_value"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                />
            <View
                android:id="@+id/schedule_view1"
                android:background="@color/divide_line"
                android:layout_below="@+id/schedule_opt_result"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <!--处理时间
-->
            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/mine_info_todo_text_process"
                android:layout_alignParentLeft="true"
                android:text="@string/schedule_opt_time"
                android:layout_below="@+id/schedule_view1"
                android:id="@+id/schedule_opt_time"
                android:layout_width="wrap_content"
                android:layout_height="44dp" />
            <TextView
                android:paddingRight="15dp"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/mine_info_radiogroup_unchecked"
                android:layout_below="@+id/schedule_view1"
                android:text="同意"
                android:id="@+id/schedule_opt_time_value"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                />
            <View
                android:id="@+id/schedule_view2"
                android:background="@color/divide_line"
                android:layout_below="@+id/schedule_opt_time"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <!--审批环节
-->
            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/mine_info_todo_text_process"
                android:layout_alignParentLeft="true"
                android:id="@+id/schedule_opt_name"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_below="@+id/schedule_view2"
                android:text="@string/schedule_opt_name" />
            <TextView
                android:paddingRight="15dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/mine_info_radiogroup_unchecked"
                android:layout_below="@+id/schedule_view2"
                android:text="同意"
                android:id="@+id/schedule_opt_name_value"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                />
            <View
                android:id="@+id/schedule_view3"
                android:background="@color/divide_line"
                android:layout_below="@+id/schedule_opt_name"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <!--审批人
-->
            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/mine_info_todo_text_process"
                android:layout_alignParentLeft="true"
                android:id="@+id/schedule_opt_by"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_below="@+id/schedule_view3"
                android:text="@string/schedule_opt_by" />
            <TextView
                android:paddingRight="15dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/mine_info_radiogroup_unchecked"
                android:layout_below="@+id/schedule_view3"
                android:text="同意"
                android:id="@+id/schedule_opt_by_value"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                />
            <View
                android:id="@+id/schedule_view4"
                android:background="@color/divide_line"
                android:layout_below="@+id/schedule_opt_by"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <!--备注-->
            <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/mine_info_todo_text_process"
                android:layout_alignParentLeft="true"
                android:id="@+id/schedule_opt_desc"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_below="@+id/schedule_view4"
                android:text="@string/schedule_opt_desc" />
            <TextView
                android:paddingRight="15dp"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/mine_info_radiogroup_unchecked"
                android:layout_below="@+id/schedule_view4"
                android:text="同意"
                android:id="@+id/schedule_opt_desc_value"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:minHeight="44dp"
                android:maxEms="16"
                android:layout_height="wrap_content"
                />

            <!--&lt;!&ndash;流程状态&ndash;&gt;-->
            <!--<TextView-->
            <!--android:id="@+id/process_state"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@+id/fg_todo_carrier"-->
            <!--android:text="@string/process_state" />-->
            <!--是否起运省-->
        </RelativeLayout>



    </android.support.v7.widget.CardView>

</RelativeLayout>